--- a/ConvertOnnxModel.vcxproj
+++ b/ConvertOnnxModel.vcxproj
@@ -32,7 +32,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{C6A45EA5-9793-4F71-ADAA-5A6CE4456D84}</ProjectGuid>
     <RootNamespace>OpModels</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>ConvertOnnxModel</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -231,10 +231,10 @@
 -->
   <ItemGroup>
     <ClCompile Include="ConvertOnnxModel.cpp" />
-    <ClCompile Include="onnx-ml.pb.cc" />
+    <ClCompile Include="onnx.pb.cc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="onnx-ml.pb.h" />
+    <ClInclude Include="onnx.pb.h" />
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="span.natvis" />
