Include half.hpp in VC solution

--- a/Onnx2Text.vcxproj
+++ b/Onnx2Text.vcxproj
@@ -332,6 +332,7 @@
     <ClCompile Include="onnx.pb.cc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="half\half.hpp" />
     <ClInclude Include="onnx.pb.h" />
   </ItemGroup>
   <ItemGroup>
